@@ -61,6 +61,7 @@ Sigil 0.6.0 TBA
     - Implement issue 1378: Update Hunspell to 1.3.2.
     - Implement issue 1379: Update Boost to Boost 1.49.0.
     - Implement issue 1283: Spell check should have an ignore option.
+    - Fix issue 1517: Delete selected file should not open another file unnecessarily.
     - Fix issue 1474: New lines added in every xhtml file after saving.
     - Fix issue 1486: Replace replaces even if text doesn't match if manually changed.
     - Fix issue 1483: Add Existing Files adds HTML files in reverse order.
